# kjvsimple

./: .kjv_favorites.json  README.md  kjvsimple.py  pyproject.toml
.github/workflows/: build.yml
